--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "playwright": "^1.49.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
