--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "@types/react-router-dom": "^5.3.3",
     "playwright": "^1.49.1",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "vite-plugin-env-compatible": "^2.0.1"
   },
@@ -32,12 +35,15 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
