--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "@types/react-router-dom": "^5.3.3",
+    "compressorjs": "^1.2.1",
     "playwright": "^1.49.1",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
